use chezmoi templates to generalize the dots

--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -1,1 +1,13 @@
 sourceDir = "~/.dotfiles"
+
+[diff]
+command = 'delta'
+
+{{ $email := promptString "git email" -}}
+{{ $name := promptString "git name" -}}
+{{ $gui := promptBool "use gui configs?" -}}
+[data]
+email = {{ $email | quote }}
+name = {{ $name | quote }}
+gui = {{ $gui }}
+
