--- a/home/private_dot_config/git/config.tmpl
+++ b/home/private_dot_config/git/config.tmpl
@@ -1,10 +1,10 @@
 [credential]
 	helper = cache
 [core]
-	excludesfile = /home/daylin/.config/git/ignore
+	excludesfile = /home/{{- .chezmoi.username -}}/.config/git/ignore
 [user]
-	name = Daylin Morgan
-	email = daylinmorgan@gmail.com
+	name = {{ .name }}
+	email = {{ .email }}
 [submodule]
 	recurse = true
 [pull]
