--- a/home/private_dot_config/git/config.tmpl
+++ b/home/private_dot_config/git/config.tmpl
@@ -15,20 +15,29 @@
 	autosetuprebase = always
 [alias]
 	root = rev-parse --show-toplevel
+
 	adog = log --all --decorate --oneline --graph
-	gl = config --global -l
+	lg = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) ->%C(bold yellow)%d%C(reset) %C(white)%s%C(reset) %C(green)(%ar)%C(reset) %C(dim white)- %an%C(reset)'
 	last = log -1 HEAD --stat
 	ll = log --oneline
+
 	st = status -sb
   s = status -s
   dd = !git diff | delta
   sd = !git show | delta
+ 
   co = checkout
   cob = checkout -b
+  br = branch --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(contents:subject) %(color:green)(%(committerdate:relative)) [%(authorname)]' --sort=-committerdate
+	
+	undo = reset HEAD~1 --mixed
+	
+	wip = !git add -A && git commit -m \"wip: $(date +\"%Y.%m.%d %H:%M:%S\")\"
 	cmt = !git commit -m \"time: $(date +\"%Y.%m.%d %H:%M:%S\")\"
 	save = !git add -A && git commit -m \"time: $(date +\"%Y.%m.%d %H:%M:%S\")\"
-  # list aliases
+  
   la = "!git config -l | grep alias | cut -c 7-"
+	gl = config --global -l
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
