--- a/home/private_dot_config/git/config.tmpl
+++ b/home/private_dot_config/git/config.tmpl
@@ -40,6 +40,7 @@ save = !git add -A && git commit -m \"time: $(date +\"%Y.%m.%d %H:%M:%S\")\"
 la = "!git config -l | grep alias | cut -c 7-"
 gl = config --global -l
 rb5 = rebase -i HEAD~5
+frbi = "!f() { git rebase -i $(git log --pretty=oneline --color=always --abbrev-commit | fzf --ansi | cut -d ' ' -f1)^ ; }; f"
 
 [filter "lfs"]
 clean = git-lfs clean -- %f
