is this signed?

--- a/home/private_dot_config/git/config.tmpl
+++ b/home/private_dot_config/git/config.tmpl
@@ -4,6 +4,13 @@ excludesfile = /home/{{- .chezmoi.username -}}/.config/git/ignore
 [user]
 name = {{ .name }}
 email = {{ .email }}
+signingkey = 7AD9DB430EE2B3C1D86BF3243CD66E04B8072F3E
+
+[commit]
+gpgSign = true
+
+[tab]
+gpgSign = true
 
 [credential]
 helper = cache
