--- a/home/private_dot_config/git/config.tmpl
+++ b/home/private_dot_config/git/config.tmpl
@@ -30,7 +30,7 @@ autosetuprebase = always
 [alias]
 root = rev-parse --show-toplevel
 adog = log --all --decorate --oneline --graph
-lg = log --graph --abbrev-commit --decorate --format=format:'%C(bold magenta)%h%C(reset) ->%C(bold yellow)%d%C(reset) %C(white)%s%C(reset) %C(green)(%ar)%C(reset) %C(dim white)- %an%C(reset)'
+lg = log --graph --abbrev-commit --decorate --format=format:'%C(bold magenta)%h%C(reset) ->%C(bold yellow)%d%C(reset) %C(white)%s%C(reset) %C(green)(%ar)%C(reset) %C(dim white)- %an%C(reset)' --all
 last = log -1 HEAD --stat
 ll = log --oneline
 st = status -sb
