--- a/home/private_dot_config/git/config.tmpl
+++ b/home/private_dot_config/git/config.tmpl
@@ -28,6 +28,7 @@ defaultBranch = main
 autosetuprebase = always
 
 [alias]
+ignore = "!gi() { curl -sL https://www.toptal.com/developers/gitignore/api/$@ ;}; gi"
 root = rev-parse --show-toplevel
 adog = log --all --decorate --oneline --graph
 lg = log --graph --abbrev-commit --decorate --format=format:'%C(bold magenta)%h%C(reset) ->%C(bold yellow)%d%C(reset) %C(white)%s%C(reset) %C(green)(%ar)%C(reset) %C(dim white)- %an%C(reset)' --all
