--- a/home/private_dot_config/git/config.tmpl
+++ b/home/private_dot_config/git/config.tmpl
@@ -27,6 +27,9 @@ defaultBranch = main
 [branch]
 autosetuprebase = always
 
+[push]
+autoSetupRemote = true
+
 [alias]
 ignore = "!gi() { curl -sL https://www.toptal.com/developers/gitignore/api/$@ ;}; gi"
 root = rev-parse --show-toplevel
