--- a/home/private_dot_config/starship/config.toml.tmpl
+++ b/home/private_dot_config/starship/config.toml.tmpl
@@ -5,8 +5,16 @@ palette = "catppuccin_mocha"
 format = "[$user]($style) on "
 
 [character]
-success_symbol = "[󰵈](bold fg:#f5e0dc)[ ](bold cyan)"
-error_symbol = "[󰵈](bold fg:red)[ !](bold red)"
+{{ if eq .chezmoi.hostname "othalan" }}
+success_symbol = "[ᛟ](bold fg:#f5e0dc)[ ](bold cyan)"
+error_symbol = "[ᛟ](bold fg:red)[ !](bold red)"
+{{ else if eq .chezmoi.hostname "algiz" }}
+success_symbol = "[ᛉ](bold fg:#f5e0dc)[ ](bold cyan)"
+error_symbol = "[ᛉ](bold fg:red)[ !](bold red)"
+{{ else }}
+success_symbol = "[⋈](bold fg:#f5e0dc)[ ](bold cyan)"
+error_symbol = "[⋈](bold fg:red)[ !](bold red)"
+{{ end }}
 
 [directory]
 truncation_length = 4
@@ -191,3 +199,5 @@ symbol = " "
 
 [scala]
 symbol = " "
+
+# vim: set syntax=toml:
