--- a/home/private_dot_config/git/config.tmpl
+++ b/home/private_dot_config/git/config.tmpl
@@ -37,7 +37,7 @@ lf = log --graph --format=tformat:'%C(bold yellow)%h%C(reset) %C(cyan)%aD%C(rese
 lg = "!f() { x=${1-6};\
   length=$(expr $x + 8);\
   git log --color --graph --all \
-    --format=format:\"%>|($length)%C(bold blue)%h%C(reset) %C(bold green)%><(15,trunc)%ar%C(reset) %s %C(black)- %an%C(reset)%C(bold yellow)%d%C(reset)\";\
+    --format=format:\"%>|($length)%C(bold blue)%h%C(reset) %C(bold green)%><(15,trunc)%ar%C(reset)%C(bold yellow)%d%C(reset) %s - %C(red)%an%C(reset)\";\
     };\
     f"
 ignore = "!gi() { curl -sL https://www.toptal.com/developers/gitignore/api/$@ ;}; gi"
