--- a/home/private_dot_config/eww/eww.scss
+++ b/home/private_dot_config/eww/eww.scss
@@ -57,11 +57,6 @@ $foreground: $white;
   border-radius: 5px;
 }
 
-
-.ws-button-active {
-  border-width: 2px;
-}
-
 .ws-button-open {
   border-width: 0px 0px 2px;
   border-style: solid;
@@ -72,6 +67,10 @@ $foreground: $white;
   .ws-button-#{index($tag-palette,$color)} {
     color: $color;
   }
+  .ws-button-active-#{index($tag-palette,$color)}{
+    color: $background;
+    background: $color;
+  }
 }
 
 .workspaces {
@@ -79,7 +78,6 @@ $foreground: $white;
   border-radius: 15px;
   padding: 0 5px;
 }
-
 
 .active {
   all: unset;
