--- a/home/private_dot_config/eww/scss/Catppuccin.scss
+++ b/home/private_dot_config/eww/scss/Catppuccin.scss
@@ -1,25 +1,26 @@
-/* ----- Catppuccin Colors ----- */
-
-$rosewater:   #F5E0DC;
-$flamingo:    #F2CDCD;
-$mauve:       #DDB6F2;
-$pink:        #F5C2E7;
-$maroon:      #E8A2AF;
-$red:         #F28FAD;
-$peach:       #F8BD96;
-$yellow:      #FAE3B0;
-$green:       #ABE9B3;
-$teal:        #B5E8E0;
-$blue:        #96CDFB;
-$sky:         #89DCEB;
-$lavender:    #C9CBFF;
-
-$black0:      #161320;
-$black1:      #1A1826;
-$black2:      #1E1E2E;
-$black3:      #302D41;
-$black4:      #575268;
-$gray0:       #6E6C7E;
-$gray1:       #988BA2;
-$gray2:       #C3BAC6;
-$white:       #D9E0EE;
+$rosewater: #f5e0dc;
+$flamingo: #f2cdcd;
+$pink: #f5c2e7;
+$mauve: #cba6f7;
+$red: #f38ba8;
+$maroon: #eba0ac;
+$peach: #fab387;
+$yellow: #f9e2af;
+$green: #a6e3a1;
+$teal: #94e2d5;
+$sky: #89dceb;
+$sapphire: #74c7ec;
+$blue: #89b4fa;
+$lavender: #b4befe;
+$text: #cdd6f4;
+$subtext1: #bac2de;
+$subtext0: #a6adc8;
+$overlay2: #9399b2;
+$overlay1: #7f849c;
+$overlay0: #6c7086;
+$surface2: #585b70;
+$surface1: #45475a;
+$surface0: #313244;
+$base: #1e1e2e;
+$mantle: #181825;
+$crust: #11111b;
