use the same color across apps

--- a/home/private_dot_config/eww/eww.scss
+++ b/home/private_dot_config/eww/eww.scss
@@ -2,8 +2,7 @@
 @use "sass:math";
 @import "scss/Catppuccin";
 
-// todo: get rid of this
-@import "/home/daylin/.config/qtile/colors/colors.scss";
+$accent: $sky;
 
 * {
   all: unset; //Unsets everything so you can style everything from scratch
