--- a/home/private_dot_config/git/config.tmpl
+++ b/home/private_dot_config/git/config.tmpl
@@ -52,7 +52,7 @@ cob = checkout -b
 br = branch --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(contents:subject) %(color:green)(%(committerdate:relative)) [%(authorname)]' --sort=-committerdate
 undo = reset HEAD~1 --mixed
 wip = !git add -A && git commit -m \"wip: $(date +\"%Y.%m.%d %H:%M:%S\")\"
-cmtnum = "!git commit -m \"commit #$(( $(git rev-list --count HEAD) + 1 ))\""
+cmtnum = "!git add -A && git commit -m \"commit #$(( $(git rev-list --count HEAD) + 1 ))\""
 save = !git add -A && git commit -m \"save: $(date +\"%Y.%m.%d %H:%M:%S\")\"
 aliases = "!git config -l | grep alias | cut -c 7-"
 gl = config --global -l
