add back nav buttons to firefox

--- a/home/private_dot_mozilla/private_firefox/profile.daylin/chrome/userChrome.css
+++ b/home/private_dot_mozilla/private_firefox/profile.daylin/chrome/userChrome.css
@@ -64,12 +64,14 @@
 }
 
 
-/* Page back and foward buttons */
+/* Page back and foward buttons 
+*
 #back-button,
 #forward-button
 {
   display: none !important;
 }
+*/
 
 /* Extensions button */
 #unified-extensions-button {
